Unicode names changed to java builtin (Unicode 10 for Java 11, Unicode 13 for Java 15)
Unicode blocks update to Unicode 13

Deprecated code (Type conversion Integer(int)) removed

build.standalone.xml modified

Compilation at least with Java 11
JEdit at least version 5.6